--- a/Quiz Site With JavaScript/index.html
+++ b/Quiz Site With JavaScript/index.html
@@ -1,16 +1,16 @@
 <html>
 	<head>
-		<title>Make Quiz Website</title>
+		<title>Ammatinvalintatesti</title>
 		<link rel="stylesheet" href="quiz.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	</head>
 	<body>
 		<div id="container">
-            <h1>Quiz Website Using JavaScript</h1>
+            <h1>Ammatinvalintatesti</h1>
    			<br/>
   			<div id="quiz"></div>
-    		<div class="button" id="next"><a href="#">Next</a></div>
-    		<div class="button" id="prev"><a href="#">Prev</a></div> 
+    		<div class="button" id="next"><a href="#">Seuraava</a></div>
+    		<div class="button" id="prev"><a href="#">Edellinen</a></div> 
     	</div>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
 		<script src="quiz.js"></script>
